syntax = "proto3";

package com.example.cache.cluster.grpc;

option java_multiple_files = true;
option java_package = "com.example.cache.cluster.grpc";

// The service definition
service CacheService {
    rpc Get (GetRequest) returns (GetResponse);
    rpc Put (PutRequest) returns (PutResponse);
    rpc Delete (DeleteRequest) returns (DeleteResponse);
}

// Data structure
message GetRequest {
    string key = 1;
}

message GetResponse {
    string value = 1;
    bool found = 2;
}

message PutRequest {
    string key = 1;
    string value = 2;
    int64 ttl_in_sec = 3;
}

message PutResponse {
    bool success = 1;
}

message DeleteRequest {
    string key = 1;
}

message DeleteResponse {
    bool success = 1;
}